[fix] fixed button position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -294,6 +294,7 @@ main {
     padding: 25px 20px;
     text-align: center;
     color: #333;
+    position: relative;
 }
 
 .works_image {
